force-app/main/default/objects/Portal_Pricing__c/Portal_Pricing__c.object-meta.xml
<CustomObject>
    <description>Pricing and Spiff Information</description>
    <label>Partner Portal Price</label>
    <nameField>
        <label>Portal Pricing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Portal Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>