force-app/main/default/objects/Portal_Pricing__c/fields/MAP__c.field-meta.xml
<CustomField>
    <fullName>MAP__c</fullName>
    <defaultValue>0</defaultValue>
    <description>For United States Resellers Only</description>
    <label>MAP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>