force-app/main/default/objects/Portal_Pricing__c/fields/MSRP__c.field-meta.xml
<CustomField>
    <fullName>MSRP__c</fullName>
    <description>For countries outside of the United States</description>
    <label>MSRP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>