force-app/main/default/objects/Portal_Pricing__c/fields/PreviousMonths__c.field-meta.xml
<CustomField>
    <fullName>PreviousMonths__c</fullName>
    <label>PreviousMonths</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>