force-app/main/default/objects/Portal_Pricing__c/fields/Spiff_Amount__c.field-meta.xml
<CustomField>
    <fullName>Spiff_Amount__c</fullName>
    <label>Spiff Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>