force-app/main/default/objects/Portal_Pricing__c/fields/Spiff_Type__c.field-meta.xml
<CustomField>
    <fullName>Spiff_Type__c</fullName>
    <label>Spiff Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Spiff_Type</valueSetName>
    </valueSet>
</CustomField>